DXC03/5-2/blue-app.yml
kind: Pod
apiVersion: v1
metadata:
  name: blue-app
  labels:
    app: blue
spec:
  containers:
    - name: blue-app
      image: hashicorp/http-echo
      args:
        - "-text=blue"

---
kind: Service
apiVersion: v1
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
    - port: 5678 # Default port for image
