DXC03/5-2/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-tls
spec:
  tls:
    - hosts:
        - localhost
      secretName: ingress-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: red-service
                port:
                  number: 5678
