DXC03/5-2/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: echo-server
      http:
        paths:
          - path: /red
            backend:
              serviceName: red-service
              servicePort: 5678
          - path: /blue
            backend:
              serviceName: blue-service
              servicePort: 5678
